--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,6 +28,23 @@ a:active {
 /* Sections   
 -------------------------------------------------- */
 
+.topcover {
+  min-height: 25vh;
+  background: url("/blulocks/public/images/cover_1.jpg") no-repeat center;
+  background-size: cover;
+  text-align: center;
+  position: relative;
+}
+
+.topcoveroverlay {
+  min-height: 25vh;
+  min-width: 100%;
+  background-color: rgba(85, 85, 85, 0.6);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .section {
   padding: 50px 0;
 }
@@ -184,23 +201,6 @@ a:active {
   border-radius: 10px;
   margin-left: 65px;
   margin-right: 65px;
-}
-
-.topcover {
-  min-height: 25vh;
-  background: url("/crimefreecities/public/images/cover5.png") no-repeat center;
-  background-size: cover;
-  text-align: center;
-  position: relative;
-}
-
-.topcoveroverlay {
-  min-height: 25vh;
-  min-width: 100%;
-  background-color: rgba(85, 85, 85, 0.6);
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 /* footer & subfooter  
