--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -29,6 +29,21 @@ a:hover, a:focus, a:active{
 
 /* Sections   
 -------------------------------------------------- */
+.topcover{
+    min-height: 25vh;
+    background: url("/blulocks/public/images/cover_1.jpg") no-repeat center;
+    background-size: cover;
+    text-align: center;
+    position: relative;
+}   
+
+.topcoveroverlay{
+    min-height: 25vh;
+    min-width: 100%;
+    background-color: rgba(85,85,85,0.6);
+    position: absolute;
+    top: 0; left: 0; 
+}  
 
 .section{
     padding: 50px 0;
@@ -178,22 +193,6 @@ a:hover, a:focus, a:active{
     margin-left:65px;
     margin-right:65px;
 } 
-
-.topcover{
-    min-height: 25vh;
-    background: url("/crimefreecities/public/images/cover5.png") no-repeat center;
-    background-size: cover;
-    text-align: center;
-    position: relative;
-}   
-
-.topcoveroverlay{
-    min-height: 25vh;
-    min-width: 100%;
-    background-color: rgba(85,85,85,0.6);
-    position: absolute;
-    top: 0; left: 0; 
-}  
 
 /* footer & subfooter  
 -------------------------------------------------- */
